--- a/personalinfo.html
+++ b/personalinfo.html
@@ -9,20 +9,9 @@
 <h1>Jezzer John Fernandez</h1>
 <h5>High leap shared services corporation</h1>     
 
-<h1>I love listen acoustic music</h1>
-    
-</body>
-</html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Info</title>
-</head>
-<body>
+<h1>I love listen acoustic music</h1>   
+<h1>this is one</h1>   
 
-<h1>Jezzer John Fernandez</h1>
-<h5>High leap shared services corporation</h1>     
     
 </body>
 </html>
