--- a/personalinfo.html
+++ b/personalinfo.html
@@ -11,7 +11,8 @@
 
 <h1>I love listen acoustic music</h1>   
 <h1>this is one</h1>   
-<h1>this is two</h1>  
+<h1>this is two</h1> 
+<h1>this is three</h1> 
 
     
 </body>
